--- a/stylesheets/fullcalendar_override.css
+++ b/stylesheets/fullcalendar_override.css
@@ -38,3 +38,9 @@ h2.fc-toolbar-title {
 div.fc-toolbar-chunk {
   text-align: center;
 }
+
+@media (prefers-color-scheme: dark) {
+  .fc-scrollgrid-sync-inner {
+    color: var(--dark-secondary);
+  }
+}
